:bug: attempt to fix issue on mobile where clicking on race card doesnt work

--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -8,6 +8,7 @@ body {
     height: 100%;
     padding: 0px;
     margin: 0px;
+    touch-action: manipulation;
 }
 
 .leaflet-popup-content-wrapper,
